--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -5,7 +5,7 @@
                                  android:background="@color/white3"
                                  android:orientation="vertical">
 
-    <com.zasion.supplier.view.CustomViewPager
+    <com.drive.student.view.CustomViewPager
         android:id="@+id/vPager"
         android:layout_width="match_parent"
         android:layout_height="0dp"
