--- a/app/src/main/res/layout/timepicker.xml
+++ b/app/src/main/res/layout/timepicker.xml
@@ -5,31 +5,31 @@
               android:layout_height="fill_parent"
               android:orientation="horizontal">
 
-    <com.zasion.supplier.view.time.WheelView
+    <com.drive.student.view.time.WheelView
         android:id="@+id/year"
         android:layout_width="wrap_content"
         android:layout_weight="1"
         android:layout_height="wrap_content"/>
 
-    <com.zasion.supplier.view.time.WheelView
+    <com.drive.student.view.time.WheelView
         android:id="@+id/month"
         android:layout_width="wrap_content"
         android:layout_weight="1"
         android:layout_height="wrap_content"/>
 
-    <com.zasion.supplier.view.time.WheelView
+    <com.drive.student.view.time.WheelView
         android:id="@+id/day"
         android:layout_width="wrap_content"
         android:layout_weight="1"
         android:layout_height="wrap_content"/>
 
-    <com.zasion.supplier.view.time.WheelView
+    <com.drive.student.view.time.WheelView
         android:id="@+id/hour"
         android:layout_width="wrap_content"
         android:layout_weight="1"
         android:layout_height="wrap_content"/>
 
-    <com.zasion.supplier.view.time.WheelView
+    <com.drive.student.view.time.WheelView
         android:id="@+id/min"
         android:layout_width="wrap_content"
         android:layout_weight="1"
