--- a/app/src/main/res/layout/user_frag.xml
+++ b/app/src/main/res/layout/user_frag.xml
@@ -21,17 +21,15 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <com.scaleview.ScaleRelativeLayout
-                android:id="@+id/user_info_rl"
+            <com.scaleview.ScaleLinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/edittext_bg_selector"
                 android:padding="@dimen/dimen_20dp">
 
                 <com.scaleview.ScaleCircleImageView
                     android:id="@+id/user_icon_iv"
-                    android:layout_width="@dimen/dimen_170dp"
-                    android:layout_height="@dimen/dimen_170dp"
+                    android:layout_width="@dimen/dimen_150dp"
+                    android:layout_height="@dimen/dimen_150dp"
                     android:layout_centerVertical="true"
                     android:scaleType="centerCrop"
                     android:src="@drawable/head_default_icon"
@@ -50,6 +48,7 @@
                         android:id="@+id/user_name_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:text="158xxxxxxxx"
                         android:textColor="@drawable/car_state_text_selector"
                         android:textSize="@dimen/dimen_32sp"/>
 
@@ -58,26 +57,17 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="@dimen/dimen_20dp"
-                        android:textColor="@drawable/car_state_text_selector"
+                        android:text="TEST: 北京"
+                        android:textColor="@color/main_black_color"
                         android:textSize="@dimen/dimen_32sp"/>
                 </com.scaleview.ScaleLinearLayout>
 
-                <com.scaleview.ScaleImageView
-                    android:id="@+id/header_arrow_iv"
-                    android:layout_width="@dimen/dimen_24dp"
-                    android:layout_height="@dimen/dimen_45dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:paddingLeft="@dimen/dimen_20dp"
-                    android:paddingRight="@dimen/dimen_20dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/arrow_right"/>
-            </com.scaleview.ScaleRelativeLayout>
+            </com.scaleview.ScaleLinearLayout>
 
             <include layout="@layout/line_9dp"/>
 
             <com.scaleview.ScaleLinearLayout
-                android:id="@+id/user_account_ll"
+                android:id="@+id/user_info_rl"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_100dp"
                 android:background="@drawable/edittext_bg_selector"
