--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -770,5 +770,8 @@
     <dimen name="dimen_320sp">320sp</dimen>
     <dimen name="dimen_266sp">266sp</dimen>
     <dimen name="dimen_356dp">356sp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 
 </resources>
