--- a/app/src/main/res/layout/header_home.xml
+++ b/app/src/main/res/layout/header_home.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_centerVertical="true"
+        android:gravity="center_vertical"
         android:padding="@dimen/dimen_15dp">
 
         <com.scaleview.ScaleTextView
