first commit local frame code

--- a/app/src/main/res/layout/school_activity.xml
+++ b/app/src/main/res/layout/school_activity.xml
@@ -5,7 +5,9 @@
                                  android:background="@color/white"
                                  android:orientation="vertical">
 
-    <include layout="@layout/header_teacher"/>
+    <include
+        android:id="@+id/header"
+        layout="@layout/header"/>
 
     <com.scaleview.ScaleLinearLayout
         android:layout_width="match_parent"
